example/errors/interpret/return_outside_function.box
when true { // if `false` then cannot detect bc we interpret
    yeet "haiz";
}
